# python-uv-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  DEVELOPING.md  DEVELOPMENT.md  Makefile  PRINCIPLES.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tasks (delete me)
.cursor/rules/: commits.mdc  python-testing.mdc  python.mdc
.devcontainer/: README.md  devcontainer.json  p10k.zsh  post-create.sh
.github/workflows/: ci.yml  dependency-updates.yml
docs/: README.md  use-this-template.md
scripts/: cz-commit.sh  setup-aliases.sh  test-cov.sh
src/your_package/: __init__.py  main.py
tests/: __init__.py
tests/unit/: test_main.py
